# Lina

./: .env.example  .gitignore  README.md  contributing.md  gui.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tatus
cache/: README.md
config/: README.md  default.toml
data/: README.md
docs/: README.md  accessibility.md  agent-recovery.md  agent-task-templates.md  architecture.md  brain-specification-v1.md  codex-authentication.md  codex-bridge.md  codex-cli-transport.md  codex-diff-review.md  codex-production-readiness.md  codex-security-boundaries.md  codex-session-resume.md  codex-task-recovery.md  conversation-flow-v1.md  development-log.md  file-attachments.md  production-readiness-v0.14.0-alpha.md  reference-ui-implementation.md  release-notes-v0.10.0-alpha.md  release-notes-v0.10.1-alpha.md  release-notes-v0.11.0-alpha.md  release-notes-v0.11.1-alpha.md  release-notes-v0.11.2-alpha.md  release-notes-v0.12.0-alpha.md  release-notes-v0.12.1-alpha.md  release-notes-v0.12.2-alpha.md  release-notes-v0.13.0-alpha.md  release-notes-v0.13.1-alpha.md  release-notes-v0.13.2-alpha.md  release-notes-v0.14.0-alpha.md  release-notes-v0.3.0-alpha.md  release-notes-v0.3.1-alpha.md  release-notes-v0.4.0-alpha.md  release-notes-v0.4.1-alpha.md  release-notes-v0.5.0-alpha.md  release-notes-v0.5.1-alpha.md  release-notes-v0.5.2-alpha.md  release-notes-v0.6.0-alpha.md  release-notes-v0.6.1-alpha.md  (+24 more)
logs/: README.md
models/: README.md
scripts/: README.md  render_ui_preview.py  tts_smoke.py
src/: README.md
tests/: README.md  conftest.py  test_gui.py  (+3 more)
(+353 files in other folders)
