[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lina-assistant"
version = "0.14.0a0"
description = "A local-first modular desktop AI assistant for Windows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Lina Project" }
]
dependencies = [
  "faster-whisper",
  "PySide6",
  "sounddevice",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# The legacy UI modules intentionally use compact one-line setup statements and
# package facades intentionally re-export typed public surfaces.
ignore = ["E701", "E702", "E731", "F403"]
